--- a/index.html
+++ b/index.html
@@ -8,10 +8,32 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Brent J. Giesbrecht Personal Webpage!</title>
+    <style>
+        body {
+          background-image: url("https://static.photocdn.pt/images/articles/2017_1/iStock-545347988.jpg");
+        }
+        h1 {
+          font-family: verdana;
+          color: royalblue;
+          text-align: center;
+        }
+        h2 {
+          font-family: verdana;
+          color: royalblue;
+          text-align: center;
+        }
+        p {
+          font-family: verdana;
+          font-size: 20px;
+        }
+        </style>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <!-- <img src="https://static.photocdn.pt/images/articles/2017_1/iStock-545347988.jpg" -->
+    <h1>Hey, I'm Brent Giesbrecht</h1>
+    <h2>Here's what I have done so far!</h2>
+    <h2>What I value!</h2>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
